Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjTextRetboolean.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, boolean> yoda
        boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
