Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjTextRetbooleanFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
